--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
 * PayPal: Allow soft descriptor to be specified [davidsantoso]
 * Authorize.net: Add disable_partial_auth field [anellis]
 * SagePay: Add apply_avscv2 field [anellis]
+* Mercury: No longer default to allow partial auth [duff]
 
 
 == Version 1.51.0 (July 2, 2015)
